converted_policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: generated-policy
specs:
- egress:
  - toEndpoints:
    - matchLabels:
        app: backend
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
  endpointSelector:
    matchLabels:
      app: frontend
- egress:
  - toEndpoints:
    - matchLabels:
        app: db
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  endpointSelector:
    matchLabels:
      app: admin
